fix media css on mobile

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -312,7 +312,8 @@ ul.post-meta {
     & .kanan{
       width: 100%;
       margin-left: 0;
-      overflow: none;
+      overflow: auto !important;
+      height: auto;
       
     }
   }
